packages/dartcv/src/core/mat.h

/**
 * @brief Create empty Mat

* ALL return values with a type of `Pointer of Struct`,
    * e.g.,
    * Mat, the internal pointer (Mat.ptr) MUST be NULL
    * otherwise the memory of mat.ptr pointed to will NOT be freed correctly.
    * Mat* mat = (Mat*)malloc(sizeof(Mat));
* CvStatus *status = cv_Mat_create(mat);
* Mat_close(mat);
*
* @param rval Mat*
* @return CvStatus
*/
CvStatus* cv_Mat_create(Mat* rval);
/**
 * @brief Create Mat with specified size and type
 *
 * @param rows number of rows
 * @param cols number of columns
 * @param type type of the created matrix
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_1(int rows, int cols, int type, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_create_10(VecPoint3i vec, Mat* rval, CvCallback_0 callback);
/**
 * @brief Create Mat with Mat::ptr
 */
CvStatus* cv_Mat_create_11(
    Mat self, int rows, int cols, int type, int prows, int pcols, Mat* rval, CvCallback_0 callback
);
/*
 * @brief Create Mat from a range
 */
CvStatus* cv_Mat_create_12(
    Mat self, int rowStart, int rowEnd, int colStart, int colEnd, Mat* rval, CvCallback_0 callback
);
void cv_Mat_close(MatPtr self);
void cv_Mat_closeVoid(void* self);
int cv_Mat_cols(Mat self);
int cv_Mat_channels(Mat self);
// CvStatus* cv_Mat_dataPtr(Mat self, uchar **data, int *length);

CvStatus* cv_Mat_adjustROI(
    Mat self, int dtop, int dbottom, int dleft, int dright, Mat* rval, CvCallback_0 callback
);
CvStatus* cv_Mat_clone(Mat self, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_col(Mat self, int x, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_copyTo(Mat self, Mat dst, CvCallback_0 callback);
CvStatus* cv_Mat_copyTo_1(Mat self, Mat dst, Mat mask, CvCallback_0 callback);
CvStatus* cv_Mat_convertTo(Mat self, Mat dst, int type, CvCallback_0 callback);
CvStatus* cv_Mat_convertTo_1(
    Mat self, Mat dst, int type, float alpha, float beta, CvCallback_0 callback
);
CvStatus* cv_Mat_convertFp16(Mat self, Mat rval, CvCallback_0 callback);