packages/dartcv/src/core/core.h

// CvStatus *noArray(InputOutputArray *rval);

void CvStatus_close(CvStatus* self);
CvStatus* cv_LUT(Mat src, Mat lut, Mat dst, CvCallback_0 callback);