packages/dartcv/lib/src/g/core.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Core
///
class CvNativeCore {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeCore(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeCore.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void CvStatus_close(
    ffi.Pointer<CvStatus> self,
  ) {
    return _CvStatus_close(
      self,
    );
  }

  late final _CvStatus_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CvStatus>)>>(
          'CvStatus_close');
  late final _CvStatus_close =
      _CvStatus_closePtr.asFunction<void Function(ffi.Pointer<CvStatus>)>();

  ffi.Pointer<CvStatus> cv_LUT(
    Mat src,
    Mat lut,
    Mat dst,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_LUT(
      src,
      lut,
      dst,
      callback,
    );
  }

  late final _cv_LUTPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, imp1.CvCallback_0)>>('cv_LUT');
  late final _cv_LUT = _cv_LUTPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_adjustROI(
    Mat self,
    int dtop,
    int dbottom,
    int dleft,
    int dright,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_adjustROI(
      self,
      dtop,
      dbottom,
      dleft,
      dright,
      rval,
      callback,
    );
  }

  late final _cv_Mat_adjustROIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_adjustROI');
  late final _cv_Mat_adjustROI = _cv_Mat_adjustROIPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  int cv_Mat_channels(
    Mat self,
  ) {
    return _cv_Mat_channels(
      self,
    );
  }

  late final _cv_Mat_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('cv_Mat_channels');
  late final _cv_Mat_channels =
      _cv_Mat_channelsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_clone(
    Mat self,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_clone(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_clonePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_clone');
  late final _cv_Mat_clone = _cv_Mat_clonePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  void cv_Mat_close(
    imp1.MatPtr self,
  ) {
    return _cv_Mat_close(
      self,
    );
  }

  late final _cv_Mat_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(imp1.MatPtr)>>(
          'cv_Mat_close');
  late final _cv_Mat_close =
      _cv_Mat_closePtr.asFunction<void Function(imp1.MatPtr)>();

  void cv_Mat_closeVoid(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _cv_Mat_closeVoid(
      self,
    );
  }

  late final _cv_Mat_closeVoidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'cv_Mat_closeVoid');
  late final _cv_Mat_closeVoid =
      _cv_Mat_closeVoidPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<CvStatus> cv_Mat_col(
    Mat self,
    int x,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_col(
      self,
      x,
      rval,
      callback,
    );
  }

  late final _cv_Mat_colPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_col');
  late final _cv_Mat_col = _cv_Mat_colPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  int cv_Mat_cols(
    Mat self,
  ) {
    return _cv_Mat_cols(
      self,
    );
  }

  late final _cv_Mat_colsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('cv_Mat_cols');
  late final _cv_Mat_cols =
      _cv_Mat_colsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_convertFp16(
    Mat self,
    Mat rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_convertFp16(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_convertFp16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_0)>>('cv_Mat_convertFp16');
  late final _cv_Mat_convertFp16 = _cv_Mat_convertFp16Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_convertTo(
    Mat self,
    Mat dst,
    int type,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_convertTo(
      self,
      dst,
      type,
      callback,
    );
  }

  late final _cv_Mat_convertToPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, imp1.CvCallback_0)>>('cv_Mat_convertTo');
  late final _cv_Mat_convertTo = _cv_Mat_convertToPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_convertTo_1(
    Mat self,
    Mat dst,
    int type,
    double alpha,
    double beta,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_convertTo_1(
      self,
      dst,
      type,
      alpha,
      beta,
      callback,
    );
  }

  late final _cv_Mat_convertTo_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Float,
              ffi.Float, imp1.CvCallback_0)>>('cv_Mat_convertTo_1');
  late final _cv_Mat_convertTo_1 = _cv_Mat_convertTo_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, double, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_copyTo(
    Mat self,
    Mat dst,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_copyTo(
      self,
      dst,
      callback,
    );
  }

  late final _cv_Mat_copyToPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_0)>>('cv_Mat_copyTo');
  late final _cv_Mat_copyTo = _cv_Mat_copyToPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_copyTo_1(
    Mat self,
    Mat dst,
    Mat mask,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_copyTo_1(
      self,
      dst,
      mask,
      callback,
    );
  }

  late final _cv_Mat_copyTo_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, imp1.CvCallback_0)>>('cv_Mat_copyTo_1');
  late final _cv_Mat_copyTo_1 = _cv_Mat_copyTo_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>();

  /// @brief Create empty Mat
  ///
  /// ALL return values with a type of `Pointer of Struct`,
  /// e.g.,
  /// Mat, the internal pointer (Mat.ptr) MUST be NULL
  /// otherwise the memory of mat.ptr pointed to will NOT be freed correctly.
  /// Mat* mat = (Mat*)malloc(sizeof(Mat));
  /// CvStatus *status = cv_Mat_create(mat);
  /// Mat_close(mat);
  ///
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create(
    ffi.Pointer<Mat> rval,
  ) {
    return _cv_Mat_create(
      rval,
    );
  }

  late final _cv_Mat_createPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>>(
      'cv_Mat_create');
  late final _cv_Mat_create = _cv_Mat_createPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>();

  /// @brief Create Mat with specified size and type
  ///
  /// @param rows number of rows
  /// @param cols number of columns
  /// @param type type of the created matrix
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_1(
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_1(
      rows,
      cols,
      type,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_create_1');
  late final _cv_Mat_create_1 = _cv_Mat_create_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_create_10(
    VecPoint3i vec,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_10(
      vec,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_10Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint3i, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_10');
  late final _cv_Mat_create_10 = _cv_Mat_create_10Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint3i, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  /// @brief Create Mat with Mat::ptr
  ffi.Pointer<CvStatus> cv_Mat_create_11(
    Mat self,
    int rows,
    int cols,
    int type,
    int prows,
    int pcols,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_11(
      self,
      rows,
      cols,
      type,
      prows,
      pcols,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_11Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_11');
  late final _cv_Mat_create_11 = _cv_Mat_create_11Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_create_12(
    Mat self,
    int rowStart,
    int rowEnd,
    int colStart,
    int colEnd,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_12(
      self,
      rowStart,
      rowEnd,
      colStart,
      colEnd,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_12Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_12');
  late final _cv_Mat_create_12 = _cv_Mat_create_12Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();
